--- a/src/vistas/3evaluacion.ejs
+++ b/src/vistas/3evaluacion.ejs
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/Doc3evStyle.css">
-    <title>3° Semestre</title>
-</head>
-
-<body>
-
+<%- include('partials/_html5') %>
+<title>3° Semestre</title>
+ <link rel="stylesheet" href="/css/Doc3evStyle.css">
+ <%- include('partials/_Header') %>
     <div class="container col-lg-12 col-xl-12 col-md-12 col-sm-12 ">
         <div class="row">
             <div class="col-lg-1 col-xl-1 col-md-1 col-sm-1"></div>
@@ -45,7 +34,7 @@
                 <form class="row g-3 ">
                     <div class="col-md-10 col-sm-10">
                         <label for="validationDefault01" class="form-label">Nombre del evaluador </label>
-                        <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
+                        <input type="text" class="form-control" id="validationDefault01" value=" <%= data[0].nombres %> <%= data[0].primerApellido %> <%=data[0].segundoApellido %> " required>
                     </div>
                     <div class="col-md-11 col-sm-11">
                         <label for="validationDefault02" class="form-label">ASIGNACIÓN DENTRO DEL <b> COMITÉ TUTORAL:
